--- a/confirmation.html
+++ b/confirmation.html
@@ -19,31 +19,27 @@
 </head>
 
 <body onload="Confirmation(); Authentication();">
-
-    <nav class="navbar navbar-dark navbar-expand-md fixed-top">
-        <div class="container-fluid"><a href="index.html"><img src="assets/img/logo-AS-tagline.svg"
-                    style="width: 100px;"></a><button data-toggle="collapse" class="navbar-toggler"
-                data-target="#navcol-1" data-aos="fade-left" data-aos-delay="1000" data-aos-once="true"><span
-                    class="sr-only">Toggle
-                    navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse text-center" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
-                            aria-expanded="false" id="currentUser" href="#"
-                            style="font-family: Amaranth, sans-serif;">Current User</a>
-                        <div class="dropdown-menu text-center shadow-lg" role="menu"
-                            style="background-color: rgba(241,237,228,0.35);color: rgb(0,123,255);"><a
-                                class="dropdown-item" role="presentation" href="packages.html"
-                                style="background-color: rgba(255,255,255,0);font-family: Amaranth, sans-serif;font-size: 20px;">Packages</a>
-                            <a class="dropdown-item" role="presentation" href="booking.html"
-                                style="background-color: rgba(255,255,255,0);font-family: Amaranth, sans-serif;font-size: 20px;">Booking</a>
-                        </div>
-                    </li>
-                    <li class="nav-item" role="presentation"></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-dark navbar-expand-md">
+    <div class="container-fluid">
+      <a href="index.html"
+        ><img src="assets/img/logo-AS-tagline.svg" style="width: 100px" /></a
+      ><button
+        data-toggle="collapse"
+        class="navbar-toggler"
+        data-target="#navcol-1"
+        data-aos="fade-left"
+        data-aos-delay="1000"
+        data-aos-once="true"
+      >
+        <span class="sr-only">Toggle navigation</span
+        ><span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navcol-1" style="text-align: right;">
+        <ul class="nav navbar-nav ml-auto" id="currentUser">
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div class="text-center main-content"
         style="background-image: url(&quot;assets/img/sky.jpg&quot;);font-family: Amaranth, sans-serif;">
         <div class="container booking-heading" style="margin-top: 0px;">
