--- a/packages.html
+++ b/packages.html
@@ -60,54 +60,8 @@
           <span class="sr-only">Toggle navigation</span
           ><span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse text-center" id="navcol-1">
-          <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item" role="presentation"></li>
-            <li class="nav-item dropdown">
-              <a
-                class="dropdown-toggle nav-link"
-                data-toggle="dropdown"
-                aria-expanded="false"
-                id="currentUser"
-                href="#"
-                style="font-family: Amaranth, sans-serif"
-                >Current User</a
-              >
-              <div
-                class="dropdown-menu text-center shadow-lg"
-                role="menu"
-                style="
-                  background-color: rgba(241, 237, 228, 0.35);
-                  color: rgb(0, 123, 255);
-                "
-              >
-                <a
-                  class="dropdown-item"
-                  role="presentation"
-                  href="cart.html"
-                  style="
-                    background-color: rgba(255, 255, 255, 0);
-                    font-family: Amaranth, sans-serif;
-                    font-size: 20px;
-                  "
-                  >Cart<i
-                    class="fas fa-shopping-cart"
-                    style="margin-left: 2px"
-                  ></i
-                ></a>
-                <a
-                  class="dropdown-item"
-                  role="presentation"
-                  href="booking.html"
-                  style="
-                    background-color: rgba(255, 255, 255, 0);
-                    font-family: Amaranth, sans-serif;
-                    font-size: 20px;
-                  "
-                  >Booking</a
-                >
-              </div>
-            </li>
+        <div class="collapse navbar-collapse" id="navcol-1" style="text-align: right;">
+          <ul class="nav navbar-nav ml-auto" id="currentUser">
           </ul>
         </div>
       </div>
