--- a/confirmation.html
+++ b/confirmation.html
@@ -63,9 +63,8 @@
                             </div>
                             <hr>
                             <div class="col">
-                                <p>Email confirmation sent to &nbsp; <strong><span
+                                <p>We sent detailed information about your tickets and payment method to &nbsp; <strong><span
                                             id="contactEmail"></span>&nbsp;</strong> .<br>
-                                    Please present email when checking in at counter.<br>
                                     We appreciate your trust in booking <br>
                                     your flight with us today. </p>
                             </div>
@@ -81,12 +80,6 @@
         <footer>
           <div class="container">
             <div class="row">
-              <div class="col-sm-6 col-md-3 item">
-                <h3>Services</h3>
-                <ul>
-                  <li><a href="claims.html">Claims</a></li>
-                </ul>
-              </div>
               <div class="col-sm-6 col-md-3 item">
                 <h3>About</h3>
                 <ul>
@@ -108,15 +101,20 @@
                   Airport and Los Angeles International Airport.
                 </p>
               </div>
-              <div class="col item social">
-                <a href="https://www.facebook.com/alaskaairlines"
-                  ><i class="icon ion-social-facebook"></i
+              <div>
+                <a href="https://www.facebook.com/alaskaairlines" target="_blank"
+                  ><img src="assets/img/facebook-3-logo-svgrepo-com.svg"
+                        width="30px"
+                        style="margin-right: 20px;"></img
                 ></a>
-                <a href="https://twitter.com/alaskaair"
-                  ><i class="icon ion-social-twitter"></i
+                <a href="https://twitter.com/alaskaair" target="_blank"
+                  ><img src="assets/img/twitter-3-logo-svgrepo-com.svg"
+                  width="30px"
+                  style="margin-right: 20px;"></img
                 ></a>
-                <a href="https://www.instagram.com/alaskaair/"
-                  ><i class="icon ion-social-instagram"></i
+                <a href="https://www.instagram.com/alaskaair/" target="_blank"
+                  ><img src="assets/img/instagram-2016-logo-svgrepo-com.svg"
+                  width="30px"></img
                 ></a>
               </div>
             </div>
