--- a/index.html
+++ b/index.html
@@ -281,137 +281,132 @@
         </div>
       </div>
     </header>
-
-    <div class="main-content">
-      <div class="container booking">
-        <div class="container-book">
-          <div
-            class="jumbotron alaska-travel"
-            style="background-color: #fff; padding: auto 0px"
-          >
-            <h1
-              class="jumbo-title"
-              style="font-family: Amaranth, sans-serif; color: rgb(19, 0, 81)"
+    <main>
+      <div class="main-content">
+        <div class="container booking">
+          <div class="container-book">
+            <div
+              class="jumbotron alaska-travel"
+              style="background-color: #fff; padding: auto 0px"
             >
-              We make the world a smaller place
-            </h1>
-            <h4
-              class="jumbo-subtitle"
-              style="font-family: Amaranth, sans-serif; color: rgb(19, 0, 81)"
-            >
-              Fly anywhere, any day for as low as $99
-            </h4>
-            <p>
-              <a
-                id="book-now"
-                class="btn btn-primary btn-lg"
-                href="#"
-                style="font-family: Amaranth, sans-serif"
-                >Book Now</a
+              <h1
+                class="jumbo-title"
               >
-            </p>
-          </div>
-        </div>
-        <div class="article-list">
-          <div class="container">
-            <div class="intro">
-              <h1 class="text-center" style="color: rgb(19, 0, 81)">Hotspots!</h1>
-              <h6 class="text-center" style="color: rgb(19, 0, 81)">
-                Hotspots are popular travel destinations known for their volcanic
-                activity and natural beauty.
-              </h6>
-              <h6 class="text-center" style="color: rgb(19, 0, 81)">
-                Book your tickets now and have a great holiday!
-              </h6>
+                We make the world a smaller place
+              </h1>
+              <h4
+                class="jumbo-subtitle"
+              >
+                Fly anywhere, any day for as low as $99
+              </h4>
+              <p>
+                <a
+                  id="book-now"
+                  class="btn btn-primary btn-lg"
+                  href="#"
+                  >Book Now</a
+                >
+              </p>
             </div>
-            <div class="row articles">
-              <div class="col-sm-6 col-md-4 item">
-                <a href="packages.html"
-                  ><img class="img-fluid" src="assets/img/paris.jpg"
-                /></a>
-                <h3 class="name" style="color: rgb(0, 0, 0)"></h3>
-                <p class="description" style="color: rgb(19, 0, 81)"></p>
+          </div>
+          <div class="article-list">
+            <div class="container">
+              <div class="intro">
+                <h1 class="text-center" style="color: rgb(19, 0, 81)">
+                  Hotspots!
+                </h1>
+                <h6 class="text-center" style="color: rgb(19, 0, 81)">
+                  Hotspots are popular travel destinations known for their
+                  volcanic activity and natural beauty.
+                </h6>
+                <h6 class="text-center" style="color: rgb(19, 0, 81)">
+                  Book your tickets now and have a great holiday!
+                </h6>
               </div>
-              <div class="col-sm-6 col-md-4 item">
-                <a href="packages.html"
-                  ><img class="img-fluid" src="assets/img/maldives.jpg"
-                /></a>
-                <h3 class="name" style="color: rgb(0, 0, 0)"></h3>
-                <p class="description" style="color: rgb(19, 0, 81)"></p>
-              </div>
-              <div class="col-sm-6 col-md-4 item">
-                <a href="packages.html"
-                  ><img class="img-fluid" src="assets/img/ny4.jpeg"
-                /></a>
-                <h3 class="name" style="color: rgb(0, 0, 0)"></h3>
-                <p class="description" style="color: rgb(19, 0, 81)"></p>
+              <div class="row articles">
+                <div class="col-sm-6 col-md-4 item">
+                  <a href="packages.html"
+                    ><img class="img-fluid" src="assets/img/paris.jpg"
+                  /></a>
+                  <h3 class="name" style="color: rgb(0, 0, 0)"></h3>
+                  <p class="description" style="color: rgb(19, 0, 81)"></p>
+                </div>
+                <div class="col-sm-6 col-md-4 item">
+                  <a href="packages.html"
+                    ><img class="img-fluid" src="assets/img/maldives.jpg"
+                  /></a>
+                  <h3 class="name" style="color: rgb(0, 0, 0)"></h3>
+                  <p class="description" style="color: rgb(19, 0, 81)"></p>
+                </div>
+                <div class="col-sm-6 col-md-4 item">
+                  <a href="packages.html"
+                    ><img class="img-fluid" src="assets/img/ny4.jpeg"
+                  /></a>
+                  <h3 class="name" style="color: rgb(0, 0, 0)"></h3>
+                  <p class="description" style="color: rgb(19, 0, 81)"></p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
-
-    <div class="footer-dark" style="font-family: Amaranth, sans-serif">
-      <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-6 col-md-3 item">
-              <h3>Services</h3>
-              <ul>
-                <li><a href="claims.html">Claims</a></li>
-              </ul>
-            </div>
-            <div class="col-sm-6 col-md-3 item">
-              <h3>About</h3>
-              <ul>
-                <li>
-                  <a
-                    href="https://en.wikipedia.org/wiki/Alaska_Airlines"
-                    target="_blank"
-                    >About us</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://en.wikipedia.org/wiki/Alaska_Airlines"
-                    target="_blank"
-                    >Careers</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-6 item text">
-              <h3>Alaska Airlines</h3>
-              <p>
-                Alaska Airlines is the main airline of the United States of
-                America with headquarters in SeaTac, a suburb of Seattle
-                (Washington State), USA.
-              </p>
-              <p>
-                The airline uses Seattle/Tacoma International Airport and Theda
-                Stevens Anchorage International Airport as its main transit
-                hubs; additional hubs are located at Portland International
-                Airport and Los Angeles International Airport.
-              </p>
-            </div>
-            <div class="col item social">
-              <a href="https://www.facebook.com/alaskaairlines" target="_blank"
-                ><i class="icon ion-social-facebook"></i
-              ></a>
-              <a href="https://twitter.com/alaskaair" target="_blank"
-                ><i class="icon ion-social-twitter"></i
-              ></a>
-              <a href="https://www.instagram.com/alaskaair/" target="_blank"
-                ><i class="icon ion-social-instagram"></i
-              ></a>
-            </div>
+    </main>
+    <footer class="footer-dark" style="font-family: Amaranth, sans-serif">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-md-3 item">
+            <h3>About</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://en.wikipedia.org/wiki/Alaska_Airlines"
+                  target="_blank"
+                  >About us</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://en.wikipedia.org/wiki/Alaska_Airlines"
+                  target="_blank"
+                  >Careers</a
+                >
+              </li>
+            </ul>
           </div>
-          <p class="copyright">Alaska Airlines &copy; 2024</p>
+          <div class="col-md-6 item text">
+            <h3>Alaska Airlines</h3>
+            <p>
+              Alaska Airlines is the main airline of the United States of
+              America with headquarters in SeaTac, a suburb of Seattle
+              (Washington State), USA.
+            </p>
+            <p>
+              The airline uses Seattle/Tacoma International Airport and Theda
+              Stevens Anchorage International Airport as its main transit hubs;
+              additional hubs are located at Portland International Airport and
+              Los Angeles International Airport.
+            </p>
+          </div>
+          <div>
+            <a href="https://www.facebook.com/alaskaairlines" target="_blank"
+              ><img src="assets/img/facebook-3-logo-svgrepo-com.svg"
+                    width="30px"
+                    style="margin-right: 20px;"></img
+            ></a>
+            <a href="https://twitter.com/alaskaair" target="_blank"
+              ><img src="assets/img/twitter-3-logo-svgrepo-com.svg"
+              width="30px"
+              style="margin-right: 20px;"></img
+            ></a>
+            <a href="https://www.instagram.com/alaskaair/" target="_blank"
+              ><img src="assets/img/instagram-2016-logo-svgrepo-com.svg"
+              width="30px"></img
+            ></a>
+          </div>
         </div>
-      </footer>
-    </div>
+        <p class="copyright">Alaska Airlines &copy; 2024</p>
+      </div>
+    </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/-Filterable-Gallery-with-Lightbox-BS4-.js"></script>
