--- a/packages.html
+++ b/packages.html
@@ -359,12 +359,6 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-md-3 item">
-                <h3>Services</h3>
-                <ul>
-                  <li><a href="claims.html">Claims</a></li>
-                </ul>
-              </div>
-              <div class="col-sm-6 col-md-3 item">
                 <h3>About</h3>
                 <ul>
                   <li><a href="https://en.wikipedia.org/wiki/Alaska_Airlines" target="_blank">About us</a></li>
@@ -385,15 +379,20 @@
                   Airport and Los Angeles International Airport.
                 </p>
               </div>
-              <div class="col item social">
-                <a href="https://www.facebook.com/alaskaairlines"
-                  ><i class="icon ion-social-facebook"></i
+              <div>
+                <a href="https://www.facebook.com/alaskaairlines" target="_blank"
+                  ><img src="assets/img/facebook-3-logo-svgrepo-com.svg"
+                        width="30px"
+                        style="margin-right: 20px;"></img
                 ></a>
-                <a href="https://twitter.com/alaskaair"
-                  ><i class="icon ion-social-twitter"></i
+                <a href="https://twitter.com/alaskaair" target="_blank"
+                  ><img src="assets/img/twitter-3-logo-svgrepo-com.svg"
+                  width="30px"
+                  style="margin-right: 20px;"></img
                 ></a>
-                <a href="https://www.instagram.com/alaskaair/"
-                  ><i class="icon ion-social-instagram"></i
+                <a href="https://www.instagram.com/alaskaair/" target="_blank"
+                  ><img src="assets/img/instagram-2016-logo-svgrepo-com.svg"
+                  width="30px"></img
                 ></a>
               </div>
             </div>
